--- a/content/notes/2009/06/2104577047.md
+++ b/content/notes/2009/06/2104577047.md
@@ -10,4 +10,4 @@ tags:
 - mtg
 ---
 
-#mtg M10 rules changes: Insanity ensues!  http://bit.ly/n1jcE
+#mtg M10 rules changes: Insanity ensues!  https://magic.wizards.com/en/articles/archive/magic-2010-rules-change-2009-06-10
