--- a/content/notes/2009/06/2274596777.md
+++ b/content/notes/2009/06/2274596777.md
@@ -10,4 +10,4 @@ tags:
 - mtg
 ---
 
-#mtg I like the Duels AI article: http://bit.ly/bXI1J (tweetdeck mangled that url =/)
+#mtg I like the Duels AI article: https://magic.wizards.com/go/magazine/article.aspx?x=mtg/daily/feature/44 (tweetdeck mangled that url =/)
