--- a/content/notes/2016/06/747332915760009216.md
+++ b/content/notes/2016/06/747332915760009216.md
@@ -6,6 +6,8 @@ syndicated:
   url: https://twitter.com/roytang/statuses/747332915760009216/
 - type: facebook
   url: https://www.facebook.com/stephen.roy.tang/posts/10154702618213912
+tags:
+- quotes
 ---
 
-"Yes well, I suppose that life is irregular"
+"Yes well, I suppose that life is irregular" -- Samwell Tarly
