mtg topic cleanup

--- a/content/notes/2011/09/117575273377038336.md
+++ b/content/notes/2011/09/117575273377038336.md
@@ -7,9 +7,21 @@ syndicated:
   url: https://twitter.com/roy_mtg/statuses/117575273377038336/
 - type: facebook
   url: https://www.facebook.com/stephen.roy.tang/posts/10150305781843912
+- type: twitter
+  url: https://twitter.com/roy_mtg/statuses/117575443187634176/
+- type: twitter
+  url: https://twitter.com/roy_mtg/statuses/117576246686269440/
+- type: twitter
+  url: https://twitter.com/roy_mtg/statuses/117789476893368320/
 tags:
 - mtg
 - mtginn
 ---
 
 Some good pulls at today's #MTGINN prerelease, though I only managed to go 3-1 http://yfrog.com/kf3cfmyrj
+
+[20:25] I really wish I could find a local tournament venue that didn't offer hot, cramped playing areas and better chairs though :/
+
+[20:28] The #MTGINN limited format seems fun, but it's kinda hard to not miss werewolf transforms on occassion.
+
+[Sep 25 10:36] These are all the rares I got in 9 packs at the #MTGINN http://yfrog.com/khbi9upgj Only 11 rares/mythics? Some people got 10 in six packs
