--- a/content/notes/2011/09/118315248557113346.md
+++ b/content/notes/2011/09/118315248557113346.md
@@ -8,7 +8,13 @@ reply_to:
 source: twitter
 syndicated:
 - type: twitter
-  url: https://twitter.com/roytang/statuses/118315248557113346/
+  url: https://twitter.com/roytang/statuses/118315248557113346/\
+- type: twitter
+  url: https://twitter.com/roytang/statuses/118324410028527617/
+tags:
+- mtg
 ---
 
 [@aleksfelipe](https://twitter.com/aleksfelipe/) GAs if you get them cheap sure. Check ko ung revoker. Ratchet Bomb wala ako
+
+[22:01] [@aleksfelipe](https://twitter.com/aleksfelipe/) no revokers here
