--- a/content/notes/2011/09/117743591593492481.md
+++ b/content/notes/2011/09/117743591593492481.md
@@ -9,8 +9,12 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roy_mtg/statuses/117743591593492481/
+- type: twitter
+  url: https://twitter.com/roy_mtg/statuses/117744174098423808/
 tags:
 - mtg
 ---
 
 [@wrongwaygoback](https://twitter.com/wrongwaygoback/) here on our end 4-0 only gets 4 packs
+
+[@wrongwaygoback](https://twitter.com/wrongwaygoback/) we also used to get promo shirts for 4-0, but none for the past 2 PRs. A judge I talked to said it was the same thruout SEA
