--- a/content/notes/2008/10/56767445.md
+++ b/content/notes/2008/10/56767445.md
@@ -3,10 +3,11 @@ date: 2008-10-28 15:55:47
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/56767445/the-price-for-being-the-best-is-always-having-to
+  url: https://roytang.tumblr.com/post/56767445/the-price-for-being-the-best-is-always-having-to
 tags:
 - quotes
 ---
 
 <blockquote>The price for being the best is always having to be the best.</blockquote>
---Nanny Ogg, Lords and Ladies by Terry Pratchett
+
+--Nanny Ogg, Lords and Ladies by Terry Pratchett
