tumblr data fix 2010

--- a/content/notes/2010/06/654314896.md
+++ b/content/notes/2010/06/654314896.md
@@ -3,7 +3,7 @@ date: 2010-06-01 21:14:39
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/654314896/leilana-i-saw-you-sten-what-leilana
+  url: https://roytang.tumblr.com/post/654314896/leilana-i-saw-you-sten-what-leilana
 tags:
 - quotes
 ---
@@ -19,4 +19,5 @@ Sten: They were medicinal.<br/>
 Leilana: You&rsquo;re a big softie!<br/>
 Sten: We shall never speak of this again.<br/>
 Leilana: Softie!</blockquote>
---Dragon Age Origins. Some of the banter is hilarious.
+
+--Dragon Age Origins. Some of the banter is hilarious.
