--- a/content/notes/2010/08/1014769410.md
+++ b/content/notes/2010/08/1014769410.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/1014769410/this-week-two-noteworthy-events-involving-the
+  url: https://roytang.tumblr.com/post/1014769410/this-week-two-noteworthy-events-involving-the
 - type: twitter
   url: https://twitter.com/roytang/statuses/22188857414/
 - type: plurk
