--- a/content/notes/2010/08/936634467.md
+++ b/content/notes/2010/08/936634467.md
@@ -3,7 +3,7 @@ date: 2010-08-11 10:54:33
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/936634467/best-weapon-ever-the-land-shark-gun
+  url: https://roytang.tumblr.com/post/936634467/best-weapon-ever-the-land-shark-gun
 - type: twitter
   url: https://twitter.com/roytang/statuses/20876413256/
 - type: plurk
