--- a/content/notes/2010/08/995237102.md
+++ b/content/notes/2010/08/995237102.md
@@ -3,7 +3,7 @@ date: 2010-08-23 00:02:27
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/995237102/what-is-the-best-samurai-movie-ever
+  url: https://roytang.tumblr.com/post/995237102/what-is-the-best-samurai-movie-ever
 - type: twitter
   url: https://twitter.com/roytang/statuses/21869425176/
 - type: plurk
