--- a/content/links/2010/06/702495605.md
+++ b/content/links/2010/06/702495605.md
@@ -8,7 +8,7 @@ link:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/702495605/10-urban-legends-that-drove-pinoys-crazy
+  url: https://roytang.tumblr.com/post/702495605/10-urban-legends-that-drove-pinoys-crazy
 ---
 
 <p>#1 is the best.</p>
