--- a/content/links/2010/08/936140820.md
+++ b/content/links/2010/08/936140820.md
@@ -8,7 +8,7 @@ link:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/936140820/4chans-founder-explains-rickroll-and-other
+  url: https://roytang.tumblr.com/post/936140820/4chans-founder-explains-rickroll-and-other
 - type: twitter
   url: https://twitter.com/roytang/statuses/20867656951/
 - type: plurk
