--- a/content/notes/2010/04/535726234.md
+++ b/content/notes/2010/04/535726234.md
@@ -3,10 +3,11 @@ date: 2010-04-20 13:13:03
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/535726234/marvel-vs-capcom-3-official-trailer
+  url: https://roytang.tumblr.com/post/535726234/marvel-vs-capcom-3-official-trailer
 tags:
 - video
 ---
 
 <p>Marvel vs Capcom 3 Official Trailer</p>
-{{< youtube LIGkAmYLlGI >}}
+
+{{< youtube LIGkAmYLlGI >}}
