--- a/content/notes/2010/05/628456420.md
+++ b/content/notes/2010/05/628456420.md
@@ -3,10 +3,11 @@ date: 2010-05-24 15:52:48
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/628456420/improv-everywhere-reenacts-ghostbusters
+  url: https://roytang.tumblr.com/post/628456420/improv-everywhere-reenacts-ghostbusters
 tags:
 - video
 ---
 
 <p>Improv Everywhere Reenacts Ghostbusters</p>
-<iframe width="400" height="225"  id="youtube_iframe" src="https://www.youtube.com/embed/wKB7zfopiUA?feature=oembed&amp;enablejsapi=1&amp;origin=http://safe.txmblr.com&amp;wmode=opaque" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="400" height="225"  id="youtube_iframe" src="https://www.youtube.com/embed/wKB7zfopiUA?feature=oembed&amp;enablejsapi=1&amp;origin=http://safe.txmblr.com&amp;wmode=opaque" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
