--- a/content/notes/2011/03/3583290532.md
+++ b/content/notes/2011/03/3583290532.md
@@ -7,10 +7,11 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/3583290532/a-programmer-should-be-able-to-find-a-bug-market
+  url: https://roytang.tumblr.com/post/3583290532/a-programmer-should-be-able-to-find-a-bug-market
 tags:
 - quotes
 ---
 
 <blockquote>A programmer should be able to find a bug, market an application, refactor a spike, lead a team, architect an application, hack a kernel, schedule a project, build a database, route a network, give a reference, implement UserStories, analyze UserStories, work in a team, work alone, use patterns, innovate, write documentation, have a RealLife, create a cool website, email efficiently, resign gracefully, AdmitIgnorance, and keep on learning. Specialization is for recruiters.</blockquote>
---with large apology to RAH and his estate, PeterMerel (via <a href="http://streamofry.tumblr.com/">streamofry</a>)
+
+--with large apology to RAH and his estate, PeterMerel (via <a href="http://streamofry.tumblr.com/">streamofry</a>)
