--- a/content/notes/2011/05/5099301259.md
+++ b/content/notes/2011/05/5099301259.md
@@ -3,7 +3,7 @@ date: 2011-05-01 13:22:36
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/5099301259/everybody-is-a-genius-but-if-you-judge-a-fish-by
+  url: https://roytang.tumblr.com/post/5099301259/everybody-is-a-genius-but-if-you-judge-a-fish-by
 - type: twitter
   url: https://twitter.com/roytang/statuses/64681121534844930/
 tags:
