tumblr data cleanup 2012-2013

--- a/content/links/2012/04/21210770345.md
+++ b/content/links/2012/04/21210770345.md
@@ -8,7 +8,7 @@ link:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/21210770345/the-2012-lyttle-lytton-contest-winners
+  url: https://roytang.tumblr.com/post/21210770345/the-2012-lyttle-lytton-contest-winners
 - type: twitter
   url: https://twitter.com/roytang/statuses/191895808369623040/
 - type: twitter
