--- a/content/links/2012/04/21210780728.md
+++ b/content/links/2012/04/21210780728.md
@@ -8,9 +8,9 @@ link:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/21210780728/tv-cancellation-watch-april-2012-metacritic
+  url: https://roytang.tumblr.com/post/21210780728/tv-cancellation-watch-april-2012-metacritic
 - type: twitter
   url: https://twitter.com/roytang/statuses/191895904876367875/
 - type: twitter
-  url: https://twitter.com/roytang/statuses/191885593616191488/  
+  url: https://twitter.com/roytang/statuses/191885593616191488/
 ---
