--- a/content/notes/2013/01/41704343941.md
+++ b/content/notes/2013/01/41704343941.md
@@ -13,7 +13,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/41704343941/a-place-for-posts-to-go-did-you-know-how
+  url: https://roytang.tumblr.com/post/41704343941/a-place-for-posts-to-go-did-you-know-how
 - type: twitter
   url: https://twitter.com/roytang/statuses/295924234960654336/
 ---
