--- a/content/notes/2013/11/66430400788.md
+++ b/content/notes/2013/11/66430400788.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/66430400788/after-learning-my-flight-was-detained-4-hours-i
+  url: https://roytang.tumblr.com/post/66430400788/after-learning-my-flight-was-detained-4-hours-i
 tags:
 - quotes
 ---
@@ -81,4 +81,5 @@ This is the world I want to live in. The shared world.</p>
 This can still happen anywhere.</p>
 
 <p>Not everything is lost.</p></blockquote>
---Naomi Shihab Nye (b. 1952), “Wandering Around an Albuquerque Airport Terminal.” I think this poem may be making the rounds, this week, but that’s as it should be.  (via <a class="tumblr_blog" href="http://oliviacirce.tumblr.com/">oliviacirce</a>)<p>When I lose hope in the world, I remember this poem. </p> (via <a href="http://bookoisseur.tumblr.com/" class="tumblr_blog">bookoisseur</a>)
+
+--Naomi Shihab Nye (b. 1952), “Wandering Around an Albuquerque Airport Terminal.” I think this poem may be making the rounds, this week, but that’s as it should be.  (via <a class="tumblr_blog" href="http://oliviacirce.tumblr.com/">oliviacirce</a>)<p>When I lose hope in the world, I remember this poem. </p> (via <a href="http://bookoisseur.tumblr.com/" class="tumblr_blog">bookoisseur</a>)
