--- a/content/notes/2013/12/71747240050.md
+++ b/content/notes/2013/12/71747240050.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/71747240050/many-adults-are-put-off-when-youngsters-pose
+  url: https://roytang.tumblr.com/post/71747240050/many-adults-are-put-off-when-youngsters-pose
 tags:
 - quotes
 ---
@@ -17,4 +17,5 @@ tags:
 <p>Too many teachers and parents answer with irritation or ridicule, or quickly move on to something else. Why adults should pretend to omniscience before a five-year-old, I can’t for the life of me understand. What’s wrong with admitting that you don’t know? Children soon recognize that somehow this kind of question annoys many adults. A few more experiences like this, and another child has been lost to science.</p>
 
 <p>There are many better responses. If we have an idea of the answer, we could try to explain. If we don’t, we could go to the encyclopedia or the library. Or we might say to the child: “I don’t know the answer. Maybe no one knows. Maybe when you grow up, you’ll be the first to find out.</p></blockquote>
---Carl Sagan (via <a class="tumblr_blog" href="http://perfect.tumblr.com/">perfect</a>)
+
+--Carl Sagan (via <a class="tumblr_blog" href="http://perfect.tumblr.com/">perfect</a>)
