--- a/content/links/2012/04/21695431159.md
+++ b/content/links/2012/04/21695431159.md
@@ -8,7 +8,7 @@ link:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/21695431159/software-engineering-is-a-dead-end-career-says
+  url: https://roytang.tumblr.com/post/21695431159/software-engineering-is-a-dead-end-career-says
 - type: twitter
   url: https://twitter.com/roytang/statuses/194623964230856706/
 ---
