--- a/content/links/2012/04/21713531771.md
+++ b/content/links/2012/04/21713531771.md
@@ -8,7 +8,7 @@ link:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/21713531771/cheese
+  url: https://roytang.tumblr.com/post/21713531771/cheese
 - type: twitter
   url: https://twitter.com/roytang/statuses/194783056194838528/
 ---
