--- a/content/notes/2013/05/51641306467.md
+++ b/content/notes/2013/05/51641306467.md
@@ -12,11 +12,12 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/51641306467/bendis-mmm-rebloggable-question-and-answers
+  url: https://roytang.tumblr.com/post/51641306467/bendis-mmm-rebloggable-question-and-answers
 ---
 
 [BENDIS!: mmm... rebloggable question and answers.  thanks guys!](http://brianmichaelbendis.tumblr.com/post/51539960908/mmm-rebloggable-question-and-answers-thanks-guys)
-<p><a href="http://brianmichaelbendis.tumblr.com/post/51539960908/mmm-rebloggable-question-and-answers-thanks-guys" class="tumblr_blog">brianmichaelbendis</a>:</p>
+
+<p><a href="http://brianmichaelbendis.tumblr.com/post/51539960908/mmm-rebloggable-question-and-answers-thanks-guys" class="tumblr_blog">brianmichaelbendis</a>:</p>
 
 <blockquote><div class="post_question medium">
 <div class="post_question medium">Brian…hi. i am a 41 year old ne’er-do-well. since i was a teen, i dreamed of drawing comics. i learned that my skill was not right and i willingly let that go but that yielding gave way for a desire to write comics. i lack schooling and confidence. i know you advise people to “just write” yet&hellip;</div></div></blockquote>
