--- a/content/notes/2013/12/70184642273.md
+++ b/content/notes/2013/12/70184642273.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/70184642273/im-going-to-keep-this-hand-what-could-possibly
+  url: https://roytang.tumblr.com/post/70184642273/im-going-to-keep-this-hand-what-could-possibly
 - type: twitter
   url: https://twitter.com/roytang/statuses/412559690187689984/
 title: I'm Going To Keep This Hand. What Could Possibly Go Wrong? - A memoire
