--- a/content/notes/2013/12/71525046021.md
+++ b/content/notes/2013/12/71525046021.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/71525046021/amithereal-im-crying-because-in-church-one-of
+  url: https://roytang.tumblr.com/post/71525046021/amithereal-im-crying-because-in-church-one-of
 - type: twitter
   url: https://twitter.com/roytang/statuses/417321331613769728/
 ---
