--- a/content/notes/2014/04/82694667997.md
+++ b/content/notes/2014/04/82694667997.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/82694667997/textsfromsuperheroes-wordsofdiana-so-we-ran
+  url: https://roytang.tumblr.com/post/82694667997/textsfromsuperheroes-wordsofdiana-so-we-ran
 - type: twitter
   url: https://twitter.com/roytang/statuses/455731973232033792/
 ---
