tumblr data fix 2015

--- a/content/notes/2015/02/109864632055.md
+++ b/content/notes/2015/02/109864632055.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/109864632055/this-is-an-excellent-writing-advice-from-chuck
+  url: https://roytang.tumblr.com/post/109864632055/this-is-an-excellent-writing-advice-from-chuck
 - type: twitter
   url: https://twitter.com/roytang/statuses/562174841680584704/
 tags:
