--- a/content/notes/2015/07/125019550275.md
+++ b/content/notes/2015/07/125019550275.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/125019550275/reblog-if-youve-ever-yelled-at-a-book
+  url: https://roytang.tumblr.com/post/125019550275/reblog-if-youve-ever-yelled-at-a-book
 title: Reblog if you've ever yelled at a book.
 ---
 
