tumblr data fix 2016 (partial)

--- a/content/notes/2016/04/142349140855.md
+++ b/content/notes/2016/04/142349140855.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/142349140855/unpretty-unpretty-villain-attempts-to-go
+  url: https://roytang.tumblr.com/post/142349140855/unpretty-unpretty-villain-attempts-to-go
 - type: twitter
   url: https://twitter.com/roytang/statuses/717709846678806529/
 - type: facebook
