--- a/content/notes/2016/09/150451178625.md
+++ b/content/notes/2016/09/150451178625.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/150451178625/mtg-realm-magic-the-gathering-a-kaldesh-love
+  url: https://roytang.tumblr.com/post/150451178625/mtg-realm-magic-the-gathering-a-kaldesh-love
 - type: twitter
   url: https://twitter.com/roytang/statuses/776462295954288640/
 tags:
