--- a/content/notes/2016/04/142916940105.md
+++ b/content/notes/2016/04/142916940105.md
@@ -7,10 +7,11 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/142916940105/you-are-the-books-you-read-the-films-you-watch
+  url: https://roytang.tumblr.com/post/142916940105/you-are-the-books-you-read-the-films-you-watch
 tags:
 - quotes
 ---
 
 <blockquote>You are the books you read the films you watch, the music you listen to, the people you meet, the dreams you have, the conversations you engage in. You are what you take from these. You are the sound of the ocean, the breath of fresh air, the brightest light and the darkest corner. You are a collective of every experience you have had in your life. You are every single second of every single day. So drown yourself in a sea of knowledge and existence. Let the words run through your veins and let the colours fill your mind.</blockquote>
---Jac Vanek<br/> (via <a href="http://neurolove.me/" class="tumblr_blog">psych-facts</a>)
+
+--Jac Vanek<br/> (via <a href="http://neurolove.me/" class="tumblr_blog">psych-facts</a>)
