tumblr data fix 2018

--- a/content/notes/2018/05/173808753735.md
+++ b/content/notes/2018/05/173808753735.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/173808753735/megmerilees-puppehgal-seiya234
+  url: https://roytang.tumblr.com/post/173808753735/megmerilees-puppehgal-seiya234
 ---
 
 <p><a href="https://megmerilees.tumblr.com/post/172544998472/puppehgal-seiya234-fandomsandfeminism" class="tumblr_blog">megmerilees</a>:</p>
