--- a/content/notes/2018/05/174273563930.md
+++ b/content/notes/2018/05/174273563930.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/174273563930/neomikey-darkandstormyslash
+  url: https://roytang.tumblr.com/post/174273563930/neomikey-darkandstormyslash
 - type: twitter
   url: https://twitter.com/roytang/statuses/1000400551299964928/
 ---
