--- a/content/notes/2018/06/174535189435.md
+++ b/content/notes/2018/06/174535189435.md
@@ -3,7 +3,7 @@ date: 2018-06-03 16:49:54
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/174535189435/playing-skyrim-i-have-my-wife-aela-and-adopted
+  url: https://roytang.tumblr.com/post/174535189435/playing-skyrim-i-have-my-wife-aela-and-adopted
 - type: twitter
   url: https://twitter.com/roytang/statuses/1003317865909555200/
 tags:
