--- a/content/notes/2018/06/175077466995.md
+++ b/content/notes/2018/06/175077466995.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/175077466995/deanplease-nanoochka-techno-gal
+  url: https://roytang.tumblr.com/post/175077466995/deanplease-nanoochka-techno-gal
 - type: twitter
   url: https://twitter.com/roytang/statuses/1009459315151863808/
 ---
