--- a/content/notes/2018/10/179553521835.md
+++ b/content/notes/2018/10/179553521835.md
@@ -7,11 +7,11 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/179553521835/for-inspiration-reasons-heres-a-list-of
+  url: https://roytang.tumblr.com/post/179553521835/for-inspiration-reasons-heres-a-list-of
 - type: twitter
   url: https://twitter.com/roytang/statuses/1056908072285859841/
-title: "For inspiration reasons, here\u2019s\_a list of actresses over 40 who can\
-  \ probably still kick our asses:"
+title: 'For inspiration reasons, here’s a list of actresses over 40 who can probably
+  still kick our asses:'
 ---
 
 <p><a href="https://gypsyqueen1966.tumblr.com/post/179547169680/for-inspiration-reasons-heres-a-list-of" class="tumblr_blog">gypsyqueen1966</a>:</p><blockquote>
