--- a/content/notes/2018/11/179955346840.md
+++ b/content/notes/2018/11/179955346840.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/179955346840/bugs-bunny-could-singlehandedly-defeat-thanos-by
+  url: https://roytang.tumblr.com/post/179955346840/bugs-bunny-could-singlehandedly-defeat-thanos-by
 - type: twitter
   url: https://twitter.com/roytang/statuses/1061170146105004032/
 - type: twitter
