--- a/content/notes/2018/06/175191906380.md
+++ b/content/notes/2018/06/175191906380.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/175191906380/thranduilland-whateverhumans-siesiegirl
+  url: https://roytang.tumblr.com/post/175191906380/thranduilland-whateverhumans-siesiegirl
 - type: twitter
   url: https://twitter.com/roytang/statuses/1010728043353202689/
 ---
