--- a/content/notes/2018/09/178183648235.md
+++ b/content/notes/2018/09/178183648235.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/178183648235/details-from-disney-movies
+  url: https://roytang.tumblr.com/post/178183648235/details-from-disney-movies
 - type: twitter
   url: https://twitter.com/roytang/statuses/1041731962300497920/
 title: Details From Disney Movies
