--- a/content/notes/2018/11/179682767790.md
+++ b/content/notes/2018/11/179682767790.md
@@ -7,7 +7,7 @@ repost_source:
 source: tumblr
 syndicated:
 - type: tumblr
-  url: https://tumblr.roytang.net/post/179682767790/chanting-ancient-cheese-with-a-deadly-disease
+  url: https://roytang.tumblr.com/post/179682767790/chanting-ancient-cheese-with-a-deadly-disease
 - type: twitter
   url: https://twitter.com/roytang/statuses/1058314155004977152/
 ---
