--- a/content/notes/2008/12/1051259035.md
+++ b/content/notes/2008/12/1051259035.md
@@ -8,4 +8,4 @@ syndicated:
   url: https://www.facebook.com/stephen.roy.tang/posts/49193308063
 ---
 
-To have your facebook status automatically updated by twitter, use the twitter facebook app: https://www.facebook.com/login.php?next=https%3A%2F%2Fapps.facebook.com%2Ftwitter%2F
+To have your facebook status automatically updated by twitter, use the twitter facebook app: https://apps.facebook.com/twitter/
