--- a/content/notes/2018/07/1014549359516479488.md
+++ b/content/notes/2018/07/1014549359516479488.md
@@ -6,6 +6,12 @@ syndicated:
   url: https://twitter.com/roytang/statuses/1014549359516479488/
 - type: facebook
   url: https://www.facebook.com/stephen.roy.tang/posts/10156750073483912
+- type: twitter
+  url: https://twitter.com/roytang/status/1014699010978791425/
 ---
 
 Tito Sotto’s wikipedia page already has a section about the Pepsi Paloma case, but none yet about his successful attempt to censor the Inquirer. Have at it!
+
+<time>[10:34]</time> Follow-up to last night's tweet: Looks like there was an edit battle last night on Tito Sotto's wikipedia page. The Pepsi Paloma case is currently no longer on the page 
+
+{{< photos 1014699010978791425 >}}
