mastodon import: by batch #1

--- a/content/notes/2018/08/1035019095287189504.md
+++ b/content/notes/2018/08/1035019095287189504.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/1035019095287189504/
+- type: mastodon
+  url: https://mastodon.technology/users/roytang/statuses/100636936331948856  
 ---
 
 python expert: my code ran correctly on my first try! lucky!
