--- a/content/notes/2019/03/1108750998288261120.md
+++ b/content/notes/2019/03/1108750998288261120.md
@@ -5,13 +5,17 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/1108750998288261120/
+- type: mastodon
+  url: https://mastodon.technology/users/roytang/statuses/101789358979810530
 tags:
 - mtg
 - magicarena
 ---
 
 Me: Loses to 3 control decks in a row. 
+
 Me: Changes to deck to be less anti-aggro, more anticontrol
+
 MagicArena: Matches me up with aggro next 
 
 #MTG #MagicArena
