--- a/content/notes/2009/06/2274596777.md
+++ b/content/notes/2009/06/2274596777.md
@@ -11,3 +11,5 @@ tags:
 ---
 
 #mtg I like the Duels AI article: https://magic.wizards.com/go/magazine/article.aspx?x=mtg/daily/feature/44 (tweetdeck mangled that url =/)
+
+<time>2022</time> Archive.org backup: https://web.archive.org/web/20170321124756/https://magic.wizards.com/en/articles/archive/duels-planeswalkers-all-about-ai-2014-02-13
