foursquare url cleanups, second batch

--- a/content/notes/2015/01/555600502004936704.md
+++ b/content/notes/2015/01/555600502004936704.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/555600502004936704/
 - type: foursquare
-  url: https://www.swarmapp.com/c/7QYMxFAqv2o
-- type: foursquare
-  url: https://www.swarmapp.com/c/7QYMxFAqv2o
+  url: https://www.swarmapp.com/roytang/checkin/54b752e8498ea41b6e88bbf3
 ---
 
 I'm at BBQ Chicken and Beer in Ortigas https://www.swarmapp.com/c/7QYMxFAqv2o
