--- a/content/notes/2015/01/556059706247368706.md
+++ b/content/notes/2015/01/556059706247368706.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/556059706247368706/
 - type: foursquare
-  url: https://www.swarmapp.com/c/13HFwMSbsNZ
-- type: foursquare
-  url: https://www.swarmapp.com/c/13HFwMSbsNZ
+  url: https://www.swarmapp.com/roytang/checkin/54b8fe93498ed11c74e24fbf
 ---
 
 I'm at @YabuPh in Mandaluyong City, Metro Manila https://www.swarmapp.com/c/13HFwMSbsNZ
