--- a/content/notes/2015/01/557886527507009539.md
+++ b/content/notes/2015/01/557886527507009539.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/557886527507009539/
 - type: foursquare
-  url: https://www.swarmapp.com/c/6LZ9PUPS5yy
-- type: foursquare
-  url: https://www.swarmapp.com/c/6LZ9PUPS5yy
+  url: https://www.swarmapp.com/roytang/checkin/54bfa3ef498e6c02bab57a28
 ---
 
 I'm at CaliBurger - @caliburberph in Quezon City w/ [@ohhhace](https://twitter.com/ohhhace/) https://www.swarmapp.com/c/6LZ9PUPS5yy
