--- a/content/notes/2015/02/569454440664707073.md
+++ b/content/notes/2015/02/569454440664707073.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/569454440664707073/
 - type: foursquare
-  url: https://www.swarmapp.com/c/jPQmyChfFmY
-- type: foursquare
-  url: https://www.swarmapp.com/c/jPQmyChfFmY
+  url: https://www.swarmapp.com/roytang/checkin/54e9b965498e74365654a484
 ---
 
 I'm at Racks in Quezon https://www.swarmapp.com/c/jPQmyChfFmY
