--- a/content/notes/2015/02/571159743114428417.md
+++ b/content/notes/2015/02/571159743114428417.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/571159743114428417/
 - type: foursquare
-  url: https://www.swarmapp.com/c/acG7owXCrfF
-- type: foursquare
-  url: https://www.swarmapp.com/c/acG7owXCrfF
+  url: https://www.swarmapp.com/roytang/checkin/54efed94498e64e990de97fb
 ---
 
 I'm at Izumi Curry Grill in Mandaluyong https://www.swarmapp.com/c/acG7owXCrfF
