--- a/content/notes/2015/06/606452021236002816.md
+++ b/content/notes/2015/06/606452021236002816.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/606452021236002816/
 - type: foursquare
-  url: https://www.swarmapp.com/c/dZHv97nJfkv
-- type: foursquare
-  url: https://www.swarmapp.com/c/dZHv97nJfkv
+  url: https://www.swarmapp.com/roytang/checkin/55705213498e1d9ce5329b41
 ---
 
 I'm at Amici in San Juan, Metro Manila w/ [@ohhhace](https://twitter.com/ohhhace/) https://www.swarmapp.com/c/dZHv97nJfkv
