--- a/content/notes/2015/06/614418071885848576.md
+++ b/content/notes/2015/06/614418071885848576.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/614418071885848576/
 - type: foursquare
-  url: https://www.swarmapp.com/c/6h7lq5VGwyS
-- type: foursquare
-  url: https://www.swarmapp.com/c/6h7lq5VGwyS
+  url: https://www.swarmapp.com/roytang/checkin/558d4d0a498ed525a35e2c89
 ---
 
 I'm at Changi Airport Terminal 1 - @fansofchangi in Singapore https://www.swarmapp.com/c/6h7lq5VGwyS
