--- a/content/notes/2015/01/557156713007435777.md
+++ b/content/notes/2015/01/557156713007435777.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/557156713007435777/
 - type: foursquare
-  url: https://www.swarmapp.com/c/9d5WWrCswVe
-- type: foursquare
-  url: https://www.swarmapp.com/c/9d5WWrCswVe
+  url: https://www.swarmapp.com/roytang/checkin/54bcfc3d498e331c558da8a0
 ---
 
 I'm at Wrong Ramen in Taguig City, Metro Manila https://www.swarmapp.com/c/9d5WWrCswVe
