--- a/content/notes/2015/02/562952125094064128.md
+++ b/content/notes/2015/02/562952125094064128.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/562952125094064128/
 - type: foursquare
-  url: https://www.swarmapp.com/c/1SGDSTDszPO
-- type: foursquare
-  url: https://www.swarmapp.com/c/1SGDSTDszPO
+  url: https://www.swarmapp.com/roytang/checkin/54d211a4498ec077d5c54980
 ---
 
 I'm at Imperium E-sports Bar and Video Game Lounge https://www.swarmapp.com/c/1SGDSTDszPO
