--- a/content/notes/2015/05/596530652499058688.md
+++ b/content/notes/2015/05/596530652499058688.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/596530652499058688/
 - type: foursquare
-  url: https://www.swarmapp.com/c/klVRvGzvNom
-- type: foursquare
-  url: https://www.swarmapp.com/c/klVRvGzvNom
+  url: https://www.swarmapp.com/roytang/checkin/554c3a14498e1dcfc744aa90
 ---
 
 I'm at Pepper Lunch - @pepperphil in Mandaluyong City, Metro Manila https://www.swarmapp.com/c/klVRvGzvNom
