--- a/content/notes/2015/05/603889886165340160.md
+++ b/content/notes/2015/05/603889886165340160.md
@@ -7,9 +7,7 @@ syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/603889886165340160/
 - type: foursquare
-  url: https://www.swarmapp.com/c/7ocXm2HXq0I
-- type: foursquare
-  url: https://www.swarmapp.com/c/7ocXm2HXq0I
+  url: https://www.swarmapp.com/roytang/checkin/5566ffe7498eec31856a7207
 ---
 
 Happy birthday [@kerwintang](https://twitter.com/kerwintang/) ! (@ Elias by Crisostomo in Quezon City, Metro Manila) https://www.swarmapp.com/c/7ocXm2HXq0I
