--- a/content/notes/2018/07/1014549359516479488.md
+++ b/content/notes/2018/07/1014549359516479488.md
@@ -8,6 +8,8 @@ syndicated:
   url: https://www.facebook.com/stephen.roy.tang/posts/10156750073483912
 - type: twitter
   url: https://twitter.com/roytang/status/1014699010978791425/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10156751260363912
 ---
 
 Tito Sotto’s wikipedia page already has a section about the Pepsi Paloma case, but none yet about his successful attempt to censor the Inquirer. Have at it!
