fbparse flip.it batch 1

--- a/content/notes/2013/05/333957544907268097.md
+++ b/content/notes/2013/05/333957544907268097.md
@@ -4,6 +4,9 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/333957544907268097/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10152234982708912
 ---
 
-RT [@bleedingcool](https://twitter.com/bleedingcool/): 24 Returning Next May For 12 Part Series, Live Another Day https://www.bleedingcool.com/2013/05/13/24-returning-next-may-for-12-part-series-live-another-day/
+[24 Returning Next May For 12 Part Series, Live Another Day](https://www.bleedingcool.com/2013/05/13/24-returning-next-may-for-12-part-series-live-another-day/) 
+
