--- a/content/notes/2014/01/425069429400297472.md
+++ b/content/notes/2014/01/425069429400297472.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/425069429400297472/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10152737195713912
 tags: []
 ---
 
