--- a/content/notes/2014/01/425635678635175936.md
+++ b/content/notes/2014/01/425635678635175936.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/425635678635175936/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10152740108823912
 ---
 
 TIM FERRISS “Someday” https://zenpencils.tumblr.com/post/73988215682/tim-ferriss-someday#_=_
