--- a/content/notes/2014/02/433201585574150144.md
+++ b/content/notes/2014/02/433201585574150144.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/433201585574150144/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10152780539708912
 ---
 
 Baby Reacts To Superman Flying In 'Man Of Steel' https://comicsalliance.com/16-month-old-baby-watches-superman-fly-man-of-steel-video/
