--- a/content/notes/2018/04/986959847408132097.md
+++ b/content/notes/2018/04/986959847408132097.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/986959847408132097/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10156582100333912
 ---
 
 Magic exists in this world https://twitter.com/rainmaker1973/status/986846549010534400
