--- a/content/notes/2018/04/990458068835098625.md
+++ b/content/notes/2018/04/990458068835098625.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/990458068835098625/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10156602672133912
 ---
 
 Friendship mage series (trigger warning:wholesome) https://imgur.com/gallery/UCvfM
