--- a/content/notes/2018/05/994435101088886785.md
+++ b/content/notes/2018/05/994435101088886785.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/994435101088886785/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10156627859313912
 ---
 
 Infinity War: Magic the Gathering Trailer https://www.youtube.com/watch?v=3z_J0OctHCo&feature=youtu.be via [@YouTube](https://twitter.com/YouTube/)
