--- a/content/notes/2018/11/179955346840.md
+++ b/content/notes/2018/11/179955346840.md
@@ -12,6 +12,8 @@ syndicated:
   url: https://twitter.com/roytang/statuses/1061170146105004032/
 - type: twitter
   url: https://twitter.com/roytang/statuses/994238624655921152/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10156626598518912
 ---
 
 <p><a href="http://vampiricyoshi.tumblr.com/post/173722099773/neilnevins-neilnevins-bugs-bunny-could" class="tumblr_blog">vampiricyoshi</a>:</p>
