--- a/content/notes/2012/09/251323638731665408.md
+++ b/content/notes/2012/09/251323638731665408.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/251323638731665408/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/530366353646734
 ---
 
 About "Pinoy Pride": https://www.getrealphilippines.com/2012/09/how-to-explain-pinoy-pride-to-a-foreigner/
