--- a/content/notes/2012/11/266957971572027393.md
+++ b/content/notes/2012/11/266957971572027393.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/266957971572027393/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/453784641350421
 ---
 
 For the uninitiated, Star Wars: The Backstroke of the West http://winterson.com/2009/01/episode-iii-backstroke-of-west-redux.html
