--- a/content/notes/2013/03/308217375298306048.md
+++ b/content/notes/2013/03/308217375298306048.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/308217375298306048/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10152122190948912
 ---
 
 Whose Line Is It Anyway? Really and Truly Coming Back Thanks to CW https://www.themarysue.com/whose-line-coming-back/
