--- a/content/notes/2014/07/485614997306097664.md
+++ b/content/notes/2014/07/485614997306097664.md
@@ -6,4 +6,4 @@ syndicated:
   url: https://twitter.com/roytang/statuses/485614997306097664/
 ---
 
-Concept Art For A WWE Fighting Game That Never Was https://flipboard.com/@flipboard/-concept-art-for-a-wwe-fighting-game-tha/f-9ad1fe19c2%2Fcomicsalliance.com
+Concept Art For A WWE Fighting Game That Never Was https://comicsalliance.com/mecha-mcmahon-concept-art-by-rich-lyons-for-a-wwe-fighting-game-that-never-was/?trackback=twitter_top
