--- a/content/notes/2017/02/827157567054893056.md
+++ b/content/notes/2017/02/827157567054893056.md
@@ -8,6 +8,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/827157567054893056/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10155332870593912
 ---
 
 In 1991 it was 17 minutes to midnight. right now, it's 2.5 minutes. Take the time to read this, if you can:  https://thebulletin.org/sites/default/files/Final%202017%20Clock%20Statement.pdf
