fbparse apps tumblr + some foursquare/fb cleanup

--- a/content/links/2010/08/936140820.md
+++ b/content/links/2010/08/936140820.md
@@ -13,4 +13,6 @@ syndicated:
   url: https://twitter.com/roytang/statuses/20867656951/
 - type: plurk
   url: https://plurk.com/p/6v7bfa
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/416679038911
 ---
