--- a/content/links/2012/04/21713531771.md
+++ b/content/links/2012/04/21713531771.md
@@ -11,4 +11,6 @@ syndicated:
   url: https://roytang.tumblr.com/post/21713531771/cheese
 - type: twitter
   url: https://twitter.com/roytang/statuses/194783056194838528/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10151480345358912
 ---
