--- a/content/notes/2016/02/697756531492675584.md
+++ b/content/notes/2016/02/697756531492675584.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/697756531492675584/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10154368798928912
 ---
 
 AFAIK, none of the candidates speak out against this sort of thing, not even the supposedly pro-environment ones https://www.philstar.com/headlines/2016/02/10/1551897/18-tons-illegal-posters-collected
