--- a/content/notes/2016/05/735714636700356609.md
+++ b/content/notes/2016/05/735714636700356609.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/735714636700356609/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10154625687143912
 ---
 
 Lol https://www.reddit.com/r/arrow so pissed off with the season finale they switched their subreddit to Daredevil
