--- a/content/notes/2016/06/741525261582114816.md
+++ b/content/notes/2016/06/741525261582114816.md
@@ -4,6 +4,10 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/741525261582114816/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10154663213658912
 ---
 
-This is hilarious https://www.ted.com/talks/james_veitch_this_is_what_happens_when_you_reply_to_spam_email
+This is hilarious 
+
+[This is what happens when you reply to spam email](http://www.ted.com/talks/james_veitch_this_is_what_happens_when_you_reply_to_spam_email)
