--- a/content/notes/2016/07/749292009936957440.md
+++ b/content/notes/2016/07/749292009936957440.md
@@ -4,6 +4,10 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/749292009936957440/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10154715920348912
 ---
 
 Is it possible to finish Super Mario Bros. 3 before Stephen Colbert can finish eating a hot pocket? https://www.youtube.com/watch?v=jvLwpnn1F4Y
+
+{{% youtube jvLwpnn1F4Y %}}
