--- a/content/notes/2016/07/752829326282797057.md
+++ b/content/notes/2016/07/752829326282797057.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/752829326282797057/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10154738899583912
 ---
 
 Street Fighter homages to classic comic covers. These are great! https://imgur.com/gallery/s0Jes
