--- a/content/notes/2016/08/769941814316965888.md
+++ b/content/notes/2016/08/769941814316965888.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/769941814316965888/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10154859759428912
 ---
 
 Wait, akala ko ba BIAS ang media? https://news.abs-cbn.com/news/08/28/16/abs-cbn-sm-to-carry-dutertes-anti-drug-ads-for-free-palace
