tags cleanup (c/o hugo check)

--- a/content/notes/2018/07/1016341689303105538.md
+++ b/content/notes/2018/07/1016341689303105538.md
@@ -10,4 +10,4 @@ syndicated:
 
 Ambabaw ko, natawa ako dito. Or sobra na ng internet: If Brooklyn Nine-Nine was set in the Philippines https://www.youtube.com/watch?v=EIuldHydbrE&feature=youtu.be via [@YouTube](https://twitter.com/YouTube/)
 
-{{% youtube EIuldHydbrE& %}}
+{{% youtube EIuldHydbrE %}}
