--- a/content/notes/2010/10/26653667916.md
+++ b/content/notes/2010/10/26653667916.md
@@ -6,6 +6,8 @@ syndicated:
   url: https://twitter.com/roytang/statuses/26653667916/
 - type: plurk
   url: https://plurk.com/p/82i32e
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/133231586725940
 ---
 
 There's nothing quite like the first google hit for an unresolved technical question being the unanswered post you yourself made.
