--- a/content/notes/2017/10/919533817420947456.md
+++ b/content/notes/2017/10/919533817420947456.md
@@ -8,4 +8,4 @@ syndicated:
   url: https://www.facebook.com/stephen.roy.tang/posts/10156110853993912
 ---
 
-If you feel like you don't deserve what you have, you're always worried someone's gonna take it away.
+If you feel like you don't deserve what you have, you're always worried someone's gonna take it away. Then all criticisms feel like an attack (or destabilization, whatever)
