fb cleanup may 2010(partial)

--- a/content/notes/2010/05/15044326280.md
+++ b/content/notes/2010/05/15044326280.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/15044326280/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/130226186990706
 ---
 
 Time to pay some bills!
