--- a/content/notes/2010/05/13956303892.md
+++ b/content/notes/2010/05/13956303892.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/13956303892/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/126499734033666
 tags:
 - halalan
 ---
