--- a/content/notes/2010/05/13960710672.md
+++ b/content/notes/2010/05/13960710672.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/13960710672/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/120810827941739
 ---
 
 Just noticed...OpenOffice 3.2 has the Oracle branding now instead of Sun.
