--- a/content/notes/2013/02/303905166707552256.md
+++ b/content/notes/2013/02/303905166707552256.md
@@ -4,6 +4,8 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/303905166707552256/
+tags:
+- zenpencils
 ---
 
 104. MALALA YOUSAFZAI: I have the right  https://zenpencils.com/comic/104-malala-yousafzai-i-have-the-right/
