--- a/content/notes/2013/03/316486783187685376.md
+++ b/content/notes/2013/03/316486783187685376.md
@@ -4,6 +4,10 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/316486783187685376/
+- type: twitter
+  url: https://twitter.com/roytang/statuses/316525363406729216/
 ---
 
 Internet has been down for a few hours and might not be up soon. =/
+
+<time>[20:21]</time> Hooray, internet lives again!
