moar random cleanup

--- a/content/notes/2013/10/395181358147858432.md
+++ b/content/notes/2013/10/395181358147858432.md
@@ -4,6 +4,12 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/395181358147858432/
+- type: twitter
+  url: https://twitter.com/roytang/status/395921069988515840/
+tags:
+- gmail
 ---
 
 Dear [@gmail](https://twitter.com/gmail/) can you stop hiding my labels (especially those with unread messages) below the fold in the side panel please?
+
+<time>[Thu, Oct. 31, 2013, 10:31 p.m.]</time> I think [@gmail](https://twitter.com/gmail/) actually listened to my last tweet to them, the problem has been fixed!
