--- a/content/notes/2012/08/236781523230138369.md
+++ b/content/notes/2012/08/236781523230138369.md
@@ -6,6 +6,14 @@ syndicated:
   url: https://twitter.com/roytang/statuses/236781523230138369/
 - type: facebook
   url: https://www.facebook.com/stephen.roy.tang/posts/10151802155868912
+- type: twitter
+  url: https://twitter.com/roytang/statuses/237755231390281728/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10151807983258912
+tags:
+- rip
 ---
 
 DILG Sec. Robredo's plane crashed near the Masbate airport. =(
+
+<time>[Tue, Aug. 21, 2012, 11:37 a.m.]</time> Sad that we lose the good ones too soon. RIP Sec. Jesse Robredo
