random cleanup - 2011 part 1

--- a/content/notes/2011/02/37167180164370432.md
+++ b/content/notes/2011/02/37167180164370432.md
@@ -8,4 +8,6 @@ syndicated:
   url: https://www.facebook.com/stephen.roy.tang/posts/200539066623414
 ---
 
-Legend of Zelda (1987) trailer: http://ping.fm/8eE3G
+Legend of Zelda (1987) trailer: https://www.youtube.com/watch?v=WF-7jPXvPEA
+
+{{% youtube WF-7jPXvPEA %}}
