--- a/content/notes/2011/03/44444558305656832.md
+++ b/content/notes/2011/03/44444558305656832.md
@@ -8,4 +8,4 @@ syndicated:
   url: https://plurk.com/p/b0uixl
 ---
 
-Reddit interviews a 4-year old (hilarious) http://ping.fm/3jkhx
+Reddit interviews a 4-year old (hilarious) https://www.reddit.com/r/IAmA/comments/fxhsu/im_4_years_old_amaa/
