--- a/content/notes/2010/11/8801774525751296.md
+++ b/content/notes/2010/11/8801774525751296.md
@@ -1,4 +1,6 @@
 ---
+checkin_id: 4cf214e82eb259414621baa1
+location: 4c7620aec219224b5e75a428
 date: 2010-11-28 08:38:01
 source: twitter
 syndicated:
@@ -6,6 +8,8 @@ syndicated:
   url: https://twitter.com/roytang/statuses/8801774525751296/
 - type: plurk
   url: https://plurk.com/p/97nqmq
+- type: foursquare
+  url: https://www.swarmapp.com/roytang/checkin/4cf214e82eb259414621baa1
 ---
 
 I'm at Shakey's Pizza (10th Avenue, P tuazon, Quezon City). http://4sq.com/hYTlGD
