--- a/content/notes/2011/11/133417410815459329.md
+++ b/content/notes/2011/11/133417410815459329.md
@@ -8,6 +8,21 @@ syndicated:
   url: https://twitter.com/roytang/statuses/133417410815459329/
 - type: foursquare
   url: https://www.swarmapp.com/roytang/checkin/4eb76e43722e578a50507bd5
+- type: twitter
+  url: https://twitter.com/roytang/statuses/133566865648783360/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10150359700423912
+reviews:
+- description: ''
+  media: movies
+  rating: 0.0
+  title: Tower Heist (2011)
+tags:
+- movies
 ---
 
 I'm at TriNoma Cinemas (TriNoma Mall, EDSA, Quezon City) http://4sq.com/tshYCb
+
+Watching Tower Heist
+
+Was it just me, or did Tower Heist feel really racist regarding Eddie Murphy's character?
