notes on old movies from 750 words

--- a/content/notes/2010/09/25876549371.md
+++ b/content/notes/2010/09/25876549371.md
@@ -14,3 +14,7 @@ reviews:
 ---
 
 watching "Legend of the Drunken Master"
+
+Notes from my journal: 
+
+> The great thing about these kung fu movies is that it makes it seem like everyone in china can fight and do kung fu like the devil.
