--- a/content/notes/2010/11/1155120318390272.md
+++ b/content/notes/2010/11/1155120318390272.md
@@ -14,3 +14,7 @@ reviews:
 ---
 
 Watching: Scott Pilgrim vs the World
+
+Notes from my journal: 
+
+> My brother and I watched Scott Pilgrim vs the world on Sunday. The movie is cool and awesome and pretty much what I expected, but I understand why it wasn't that big a hit financially and some critics criticized it a bit too much. You really need to be a gamer or comics guy to really appreciate it.
