--- a/content/notes/2010/11/8523800157093889.md
+++ b/content/notes/2010/11/8523800157093889.md
@@ -14,3 +14,7 @@ reviews:
 ---
 
 Watching The Social Network, but I keep imagining Michael cera playing Zuck
+
+Notes from my journal: 
+
+> The Social Network was ok for a movie, but of course I took it with a grain of salt because basically the whole movie came from a book where everything came only from the side of the cofounder who had a falling out with zuckerberg. I also had a bit of trouble taking some parts seriously because the guy playing suck looks a bit like Michael cera so I kept imagining the lines with cera's whiny little voice. It made some scenes more amusing lol. Overall the movie is good, and they didn't butcher the geek stuff too much. At least now I know zuckerberg was a real programmer.
