--- a/content/notes/2013/12/413250467028692993.md
+++ b/content/notes/2013/12/413250467028692993.md
@@ -4,6 +4,10 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/413250467028692993/
+- type: twitter
+  url: https://twitter.com/roytang/statuses/545481177856225280/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10153421811808912
 ---
 
 Tinatamad na ako lumabas forever
