--- a/content/notes/2010/08/1014769410.md
+++ b/content/notes/2010/08/1014769410.md
@@ -13,7 +13,7 @@ syndicated:
 - type: plurk
   url: https://plurk.com/p/76jxpz
 tags:
-- quotes
+- philippines
 ---
 
 <blockquote>This week two noteworthy events involving the Philippines made headlines: the botched rescue of Chinese tourists taken hostage by a disgruntled former policeman, and a botched response to a question by Miss Philippines in the finals for the Miss Universe contest. You might ask, what do these two things have in common? Separately, not much, but taken together, they represent both the peril and promise of the Philippines today.<br/>
