--- a/content/notes/2009/12/6600265361.md
+++ b/content/notes/2009/12/6600265361.md
@@ -8,6 +8,7 @@ syndicated:
 tags:
 - mtgo
 - mtg
+- merged
 ---
 
 I wish the Exodus queues would fire. People need to play different formats every so often :D #mtgo
