--- a/content/notes/2011/02/38252295791706112.md
+++ b/content/notes/2011/02/38252295791706112.md
@@ -4,6 +4,10 @@ source: twitter
 syndicated:
 - type: twitter
   url: https://twitter.com/roytang/statuses/38252295791706112/
+- type: facebook
+  url: https://www.facebook.com/stephen.roy.tang/posts/10150092810508912
 ---
 
 My mvc3 online win rate is 100%, should I quit forever?
+
+(The next morning) Wala na, 50% na lang. It was so fleeting, I'll never be 100% again!
